# src/main/java/com/dsm/oshu/auth/presentation/dto/GoogleLoginRequest.java
@@ -1,0 +1,6 @@
+package com.dsm.oshu.auth.presentation.dto;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record GoogleLoginRequest(@NotBlank String idToken) {
+}
